# poolpat-portfolio

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  SPOTIFY_DISCORD_GUIDE.md  astro.config.mjs  demo_analytics.py  index.html  package-lock.json  package.json  setup_camoufox_spotify.py  setup_discord.sh  setup_discord_webhook.sh  sitemap-0.xml  sitemap-index.xml  test_discord_webhook.sh  tsconfig.json  vitest.config.ts
.github/: dependabot.yml
_astro/: Base.BOH664MR.css
config/: camoufox_spotify.json
data/: .fetch_failures.json  .sc_state.json  am_locations.json  history.csv  insights.json  play_history_yearly.json  playlists.json  plays.json  rss_tracks.json  world-geo.json  (+1 more)
pipeline/: .env.example  apply_oauth.py  camoufox_spotify_player.py  check_soundcloud_camoufox.py  explore_camoufox.py  fetch_insights.py  fetch_playlists.py  fetch_plays.py  musickit_token.py  oauth_auto.py  oauth_manual.py  oauth_pkce.py  oauth_simple.py  oauth_spotify.py  pyproject.toml  reauth_spotify.py  refresh_access.py  refresh_token.py  requirements.txt  run_batch.py  run_batch.sh  run_batch_cached.py  run_spotify.py  run_spotify_batch.sh  spotify_auth.py  spotify_client.py  spotify_discord_analytics.py  spotify_enhanced_analytics.py  spotify_errors.py  spotify_flow.py  use_cached_tokens.py  use_camoufox.py
pipeline/tests/: test_fetch_insights.py  test_fetch_playlists.py  test_fetch_plays_engagement.py  test_fetch_plays_monotonic.py  test_fetch_plays_orchestration.py  test_spotify_auth.py  test_spotify_client.py  test_spotify_enhanced_analytics.py  test_spotify_errors.py
(+49 files in other folders)
