[project]
name = "poolpat-pipeline"
version = "0.1.0"
description = "Multi-platform play count fetcher for Poolpat"
requires-python = ">=3.10"
dependencies = [
    "requests==2.34.2",
    "beautifulsoup4==4.15.0",
    "PyJWT[crypto]==2.13.0",
    "defusedxml==0.7.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
